AGC021 の大会成績追加

--- a/performance/index.html
+++ b/performance/index.html
@@ -1,22 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="ja">
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-83917768-2', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-83917768-2', 'auto');
+    ga('send', 'pageview');
 </script>
 <head>
-<meta charset="UTF-8">
-<meta name=viewport content="width=device-width, initial-scale=1">
-<title>海城コンピューター部　競技プログラミング成績 | 海城コンピューター部活動記</title>
-<link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
-<meta name="Keywords" content="海城,競技,プログラミング,コンピューター">
-<meta name="Description" content="海城コンピューター部の競技プログラミング成績">
+    <meta charset="UTF-8">
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <title>海城コンピューター部　競技プログラミング成績 | 海城コンピューター部活動記</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
+    <meta name="Keywords" content="海城,競技,プログラミング,コンピューター">
+    <meta name="Description" content="海城コンピューター部の競技プログラミング成績">
 </head>
 
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
@@ -27,9 +29,9 @@
 <script type="text/javascript" src="/common/js/jquery.flatheights.min.js"></script>
 
 <script>
-jQuery(function() {
-$('#pickup article').flatHeights();
-});
+    jQuery(function () {
+        $('#pickup article').flatHeights();
+    });
 </script>
 <!--[if lt IE 9]>
 <script src="common/js/html5shiv.js"></script>
@@ -48,8 +50,8 @@ $('#pickup article').flatHeights();
 
         <div id="contents">
             <ul class="syncer-brcb">
-            <li><a href="/index.html" itemprop="url"><span itemprop="title">ホーム</span></a></li>
-            <li><span itemprop="title">海城コンピューター部の競技プログラミング成績</span></li>
+                <li><a href="/index.html" itemprop="url"><span itemprop="title">ホーム</span></a></li>
+                <li><span itemprop="title">海城コンピューター部の競技プログラミング成績</span></li>
             </ul>
             <br><hr>
 
@@ -57,7 +59,7 @@ $('#pickup article').flatHeights();
             <section id="pickup">
                 <!-- ↓↓コンテンツの見出し↓↓ -->
                 <h1>海城コンピューター部の競技プログラミング成績</h1>
-                
+
                 海城コンピューター部のプログラム班は、年一回開催される学生を対象にした<br>
                 日本情報オリンピック(JOI)に向けて日々修行を積んでいます。<br><br>
                 普段はプログラム班はAtCoderやCodeforcesなどの<br>
@@ -65,7 +67,7 @@ $('#pickup article').flatHeights();
                 不定期の勉強会も有志で開いています。<br><br>
                 このページでは、部員の普段の大会参加成績を公表しています。<br>
                 上の成績ほど新しい大会のものです。<br>
-                
+
                 <br>
 
                 <!--
@@ -75,6 +77,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2018/02/24</td><td><a href="https://beta.atcoder.jp/contests/agc021" itemprop="url">AtCoder Grand Contest 021</a></td><td>100位、400位、940位</td></tr>
                     <tr><td>2017/11/25</td><td><a href="https://beta.atcoder.jp/contests/cf17-final-open" itemprop="url">CODE FESTIVAL 2017 Final (Parallel)</a></td><td>30位、70位、120位、189位</td></tr>
                     <tr><td>2017/11/19</td><td><a href="https://beta.atcoder.jp/contests/abc079" itemprop="url">AtCoder Beginner Contest 079</a></td><td>42位、75位、152位、355位</td></tr>
                     <tr><td>2017/10/07</td><td><a href="http://arc082.contest.atcoder.jp/" itemprop="url">DISCO presents ディスカバリーチャンネル コードコンテスト2017 予選</a></td><td>13位、73位、771位</td></tr>
