--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="ja">
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-83917768-2', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-83917768-2', 'auto');
+    ga('send', 'pageview');
 </script>
 <head>
     <meta charset="UTF-8">
@@ -23,9 +25,9 @@
 <script type="text/javascript" async src="/common/js/jquery.min.js"></script>
 <script type="text/javascript" async src="/common/js/jquery.flatheights.min.js"></script>
 <script>
-jQuery(function() {
-$('#pickup article').flatHeights();
-});
+    jQuery(function () {
+        $('#pickup article').flatHeights();
+    });
 </script>
 <!--[if lt IE 9]>
 <script src="common/js/html5shiv.js"></script>
@@ -62,9 +64,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>11.26</time>
+                        <time><span>2018</span>02.25</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>11/25 に行われた CODE FESTIVAL 2017 Final (Parallel) の参加成績を公表しました</p>
+                        <p>2/24 に行われた AtCoder Grand Contest 021 の参加成績を公表しました</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
