ARC096 / ABC095 大会成績追加

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2018</span>02.25</time>
+                        <time><span>2018</span>04.22</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>2/24 に行われた AtCoder Grand Contest 021 の参加成績を公表しました</p>
+                        <p>4/21 に行われた AtCoder Regular Contest 096 / AtCoder Beginner Contest 095 の参加成績を公表しました</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
