--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2018</span>04.22</time>
+                        <time><span>2018</span>06.24</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>4/21 に行われた AtCoder Regular Contest 096 / AtCoder Beginner Contest 095 の参加成績を公表しました</p>
+                        <p>6/23 に行われた AtCoder Regular Contest 099 の参加成績を公表しました</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
