--- a/performance/index.html
+++ b/performance/index.html
@@ -77,6 +77,7 @@
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2018/07/15</td><td><a href="https://beta.atcoder.jp/contests/agc026" itemprop="url">AtCoder Grand Contest 026</a></td><td>650位</td></tr>
                     <tr><td>2018/06/24</td><td><a href="https://beta.atcoder.jp/contests/arc099" itemprop="url">AtCoder Regular Contest 099</a></td><td>351位</td></tr>
                     <tr><td>2018/04/21</td><td><a href="https://beta.atcoder.jp/contests/arc096" itemprop="url">AtCoder Regular Contest 096</a></td><td>94位、245位、388位</td></tr>
                     <tr><td>2018/04/21</td><td><a href="https://beta.atcoder.jp/contests/abc095" itemprop="url">AtCoder Beginner Contest 095</a></td><td>72位、1234位</td></tr>
