--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
                 <h1>新着情報</h1>
                 <!-- 3個までにすること -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="production/2018/index.html">
+                    <article>
+                        <time><span>2018</span>09.16</time>
+                        <h2>第 127 回海城祭 作品</h2>
+                        <p>第 127 回海城祭の部の展示に公開したゲーム・ソフトがダウンロードできます</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
                         <time><span>2018</span>07.15</time>
@@ -79,21 +88,21 @@
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="production/2017/index.html">
-                    <article>
-                        <time><span>2017</span>09.15</time>
-                        <h2>第126回海城祭 作品</h2>
-                        <p>第126回海城祭の部の展示に公開したゲーム・ソフトがダウンロードできます</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
             </section>
             <!-- ↑更新履歴sectionここまで↑ -->
             <!-- ↓オススメコンテンツここから↓ -->
             <section id="pickup">
                 <!-- ↓↓オススメコンテンツの見出し↓↓ -->
                 <h1>オススメコンテンツ</h1>
+                <!-- ↓↓オススメコンテンツここから↓↓ -->
+                <a href="production/2018/index.html">
+                    <article style="width: 300px;">
+                        <img src="production/2018/img/Launcher.png" alt="2018 文化祭展示ゲーム" width="300" height="225">
+                        <h2>2018 文化祭展示ゲーム</h2>
+                        <p>2018 年度文化祭に展示したゲームがダウンロードできます</p>
+                    </article>
+                </a>
+                <!-- ↑↑オススメコンテンツここまで↑↑ -->
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="production/2017/index.html">
                     <article style="width: 300px;">
