--- a/production/index.html
+++ b/production/index.html
@@ -55,7 +55,15 @@ $('#pickup article').flatHeights();
             <!-- ↓コンテンツここから↓ -->
             <section id="pickup">
                 <h1>制作物</h1>
-
+                <!-- ↓↓オススメコンテンツここから↓↓ -->
+                <a href="2018/index.html">
+                    <article style="width: 300px;">
+                        <img src="2018/img/Launcher.png" alt="2018文化祭展示ゲーム" width="300" height="225">
+                        <h2>2018 文化祭展示ゲーム</h2>
+                        <p>2018 年度文化祭に展示したゲームがダウンロードできます</p>
+                    </article>
+                </a>
+                <!-- ↑↑オススメコンテンツここまで↑↑ -->
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="2017/index.html">
                     <article style="width: 300px;">
