2020年度の特設サイト関係の案内を追加

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </noscript>
         <script src="/header.js"></script>
         <div id="contents">
+        	<span style="font-size:30px;padding:1em;">第129回の文化祭公式サイトは<a href="https://kaijocombfes2020.com" target="_blank">こちら</a>！！</span>
+
             <ul class="syncer-brcb">
                 <li><span itemprop="title">ホーム</span></li>
             </ul>
@@ -62,6 +64,15 @@
                 <h1>新着情報</h1>
                 <!-- 3個までにすること -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="https://kaijocombfes2020.com" target="_blank">
+                    <article>
+                        <time><span>2020</span>09.01</time>
+                        <h2>第 129 回海城祭 作品・特設サイト</h2>
+                        <p>第 129 回海城祭の特設サイトを作成しました。作品がダウンロードできます。</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="production/2019/index.html">
                     <article>
                         <time><span>2019</span>09.15</time>
@@ -79,21 +90,21 @@
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="https://www.kaijo.ed.jp/students/14588" target="_blank">
-                    <article>
-                        <time><span>2017</span>09.16</time>
-                        <h2>パソコン甲子園 本選出場決定</h2>
-                        <p>9/9に行われたパソコン甲子園2017予選で、本選への出場が決まりました！</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
             </section>
             <!-- ↑更新履歴sectionここまで↑ -->
             <!-- ↓オススメコンテンツここから↓ -->
             <section id="pickup">
                 <!-- ↓↓オススメコンテンツの見出し↓↓ -->
                 <h1>オススメコンテンツ</h1>
+                <!-- ↓↓オススメコンテンツここから↓↓ -->
+                <a href="http://kaijocombfes2020.com" target="_blank">
+                    <article style="width: 300px;">
+                        <img src="img/2020.png" alt="2019 文化祭特設サイト" width="auto" height="225">
+                        <h2>2019 文化祭特設サイト</h2>
+                        <p>2019 年度文化祭のウェブサイトにアクセスできます。リンクが切れてたらごめんなさい。</p>
+                    </article>
+                </a>
+                <!-- ↑↑オススメコンテンツここまで↑↑ -->
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="production/2018/index.html">
                     <article style="width: 300px;">
