2020年分のページを若干追加

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         </noscript>
         <script src="/header.js"></script>
         <div id="contents">
-        	<span style="font-size:30px;padding:1em;">第129回の文化祭公式サイトは<a href="https://kaijocombfes2020.com" target="_blank">こちら</a>！！</span>
 
             <ul class="syncer-brcb">
                 <li><span itemprop="title">ホーム</span></li>
@@ -64,7 +63,7 @@
                 <h1>新着情報</h1>
                 <!-- 3個までにすること -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="https://kaijocombfes2020.com" target="_blank">
+                <a href="production/2020/index.html">
                     <article>
                         <time><span>2020</span>09.01</time>
                         <h2>第 129 回海城祭 作品・特設サイト</h2>
@@ -97,7 +96,7 @@
                 <!-- ↓↓オススメコンテンツの見出し↓↓ -->
                 <h1>オススメコンテンツ</h1>
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
-                <a href="http://kaijocombfes2020.com" target="_blank">
+                <a href="production/2020/index.html">
                     <article style="width: 300px;">
                         <img src="img/2020.png" alt="2020 文化祭特設サイト" width="auto" height="225">
                         <h2>2020 文化祭特設サイト</h2>
