おすすめコンテンツのスタイル更新

--- a/production/index.html
+++ b/production/index.html
@@ -20,6 +20,7 @@
 </head>
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
 <link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
+<link rel="stylesheet" href="/common/css/production.css" type="text/css">
 
 <script type="text/javascript" src="/common/js/jquery.min.js"></script>
 <script type="text/javascript" src="/common/js/jquery.flatheights.min.js"></script>
@@ -57,7 +58,7 @@ $('#pickup article').flatHeights();
                    <h1>制作物</h1>
                    <!-- ↓↓オススメコンテンツここから↓↓ -->
                    <a href="2019/index.html">
-                       <article style="width: 300px;">
+                       <article class="content_box">
                            <img src="2019/img/Launcher.png" alt="2019文化祭展示ゲーム" width="300" height="225">
                            <h2>2019 文化祭展示ゲーム</h2>
                            <p>2019 年度文化祭に展示したゲームがダウンロードできます</p>
@@ -66,7 +67,7 @@ $('#pickup article').flatHeights();
                    <!-- ↑↑オススメコンテンツここまで↑↑ -->
                    <!-- ↓↓オススメコンテンツここから↓↓ -->
                    <a href="2018/index.html">
-                       <article style="width: 300px;">
+                       <article class="content_box">
                            <img src="2018/img/Launcher.png" alt="2018文化祭展示ゲーム" width="300" height="225">
                            <h2>2018 文化祭展示ゲーム</h2>
                            <p>2018 年度文化祭に展示したゲームがダウンロードできます</p>
@@ -75,7 +76,7 @@ $('#pickup article').flatHeights();
                    <!-- ↑↑オススメコンテンツここまで↑↑ -->
                    <!-- ↓↓オススメコンテンツここから↓↓ -->
                    <a href="2017/index.html">
-                       <article style="width: 300px;">
+                       <article class="content_box">
                            <img src="2017/img/Launcher.png" alt="2017文化祭展示ゲーム" width="300" height="225">
                            <h2>2017文化祭展示ゲーム</h2>
                            <p>2017年度文化祭に展示したゲームがダウンロードできます</p>
@@ -84,7 +85,7 @@ $('#pickup article').flatHeights();
                    <!-- ↑↑オススメコンテンツここまで↑↑ -->
                    <!-- ↓↓オススメコンテンツここから↓↓ -->
                    <a href="2016/index.html">
-                       <article style="width: 300px;">
+                       <article class="content_box">
                            <img src="2016/img/Launcher.png" alt="2016文化祭展示ゲーム" width="300" height="225">
                            <h2>2016文化祭展示ゲーム</h2>
                            <p>2016年度文化祭に展示したゲームがダウンロードできます</p>
