--- a/production/index.html
+++ b/production/index.html
@@ -58,7 +58,7 @@ $('#pickup article').flatHeights();
                    <h1>制作物</h1>
                    <!-- ↓↓オススメコンテンツここから↓↓ -->
                    <a href="2019/index.html" class="content_box">
-                       <article>
+                       <article class="content_box">
                            <img src="2019/img/Launcher.png" alt="2019文化祭展示ゲーム" width="300" height="225">
                            <h2>2019 文化祭展示ゲーム</h2>
                            <p>2019 年度文化祭に展示したゲームがダウンロードできます</p>
