--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
 <link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
+<link rel="stylesheet" href="/common/css/production.css" type="text/css">
 <script type="text/javascript" async src="/common/js/jquery.min.js"></script>
 <script type="text/javascript" async src="/common/js/jquery.flatheights.min.js"></script>
 <script>
@@ -97,7 +98,7 @@
                 <h1>オススメコンテンツ</h1>
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="production/2020/index.html">
-                    <article style="width: 300px;">
+                    <article class="content_box">
                         <img src="img/2020.png" alt="2020 文化祭特設サイト" width="auto" height="225">
                         <h2>2020 文化祭特設サイト</h2>
                         <p>2020 年度文化祭のウェブサイトにアクセスできます。リンクが切れてたらごめんなさい。</p>
@@ -106,7 +107,7 @@
                 <!-- ↑↑オススメコンテンツここまで↑↑ -->
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="production/2019/index.html">
-                    <article style="width: 300px;">
+                    <article class="content_box">
                         <img src="production/2019/img/Launcher.png" alt="2019 文化祭展示ゲーム" width="300" height="225">
                         <h2>2019 文化祭展示ゲーム</h2>
                         <p>2019 年度文化祭に展示したゲームがダウンロードできます</p>
@@ -115,7 +116,7 @@
                 <!-- ↑↑オススメコンテンツここまで↑↑ -->
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="production/2018/index.html">
-                    <article style="width: 300px;">
+                    <article class="content_box">
                         <img src="production/2018/img/Launcher.png" alt="2018 文化祭展示ゲーム" width="300" height="225">
                         <h2>2018 文化祭展示ゲーム</h2>
                         <p>2018 年度文化祭に展示したゲームがダウンロードできます</p>
@@ -124,7 +125,7 @@
                 <!-- ↑↑オススメコンテンツここまで↑↑ -->
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="production/2017/index.html">
-                    <article style="width: 300px;">
+                    <article class="content_box">
                         <img src="production/2017/img/Launcher.png" alt="2017文化祭展示ゲーム" width="300" height="225">
                         <h2>2017文化祭展示ゲーム</h2>
                         <p>2017年度文化祭に展示したゲームがダウンロードできます</p>
