トップページを編集

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <a href="production/2020/index.html">
                     <article>
                         <time><span>2020</span>09.01</time>
-                        <h2>第 129 回海城祭 作品・特設サイト</h2>
-                        <p>第 129 回海城祭の特設サイトを作成しました。作品がダウンロードできます。</p>
+                        <h2>第 129 回海城祭 作品</h2>
+                        <p>第 129 回海城祭の部の展示に公開したゲーム・ソフトがダウンロードできます</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
@@ -100,8 +100,8 @@
                 <a href="production/2020/index.html">
                     <article class="content_box">
                         <img src="img/2020.png" alt="2020 文化祭特設サイト" width="auto" height="225">
-                        <h2>2020 文化祭特設サイト</h2>
-                        <p>2020 年度文化祭のウェブサイトにアクセスできます。リンクが切れてたらごめんなさい。</p>
+                        <h2>2020 文化祭配布ゲーム</h2>
+                        <p>2020 年度文化祭のウェブサイトのアーカイブにアクセスできます。</p>
                     </article>
                 </a>
                 <!-- ↑↑オススメコンテンツここまで↑↑ -->
