feat: changed UI of #contents > section > h1, and some other small UI fix

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta name="Keywords" content="海城,コンピューター,プログラミング,DTM">
     <meta name="Description" content="海城コンピューター部の公式ページです">
 </head>
-<link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
-<link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
+<link rel="stylesheet" href="/common/css/common.css" type="text/css">
+<link rel="stylesheet" href="/common/css/index.css" type="text/css">
 <link rel="stylesheet" href="/common/css/production.css" type="text/css">
 <script type="text/javascript" async src="/common/js/jquery.min.js"></script>
 <script type="text/javascript" async src="/common/js/jquery.flatheights.min.js"></script>
@@ -44,20 +44,21 @@
         </noscript>
         <script src="/header.js"></script>
         <div id="contents">
-
-            <ul class="syncer-brcb">
-                <li><span itemprop="title">ホーム</span></li>
-            </ul>
+            <section id="top">
+            <!-- <ul class="syncer-brcb"> -->
+                <h1><span itemprop="title">ホーム</span></h1>
+            <!-- </ul> -->
             <br><hr>
             <div id="mainImg">
                 <!-- ↓メイン画像↓ -->
-                <img src="img/main.png" alt="部室" width="500" height="275">
+                <img src="img/main.png" alt="部室" width="600" height="300">
                 <!-- ↓管理人のコメント↓ -->
                 <p>
-                    海城コンピューター部の<br>公式ホームページです。<br><br>
-                    文化祭で展示したゲームの<br>配布、大会での成績の公表<br>その他に普段の活動の公開などを行っています。
+                    海城コンピューター部の公式ホームページです。<br>
+                    文化祭で展示したゲームの配布、大会での成績の公表その他に普段の活動の公開などを行っています。
                 </p>
             </div>
+            </section>
             <!-- ↓更新履歴sectionここから↓ -->
             <section id="information">
                 <!-- ↓↓更新履歴の見出し↓↓ -->
