--- a/performance/index.html
+++ b/performance/index.html
@@ -77,6 +77,7 @@
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2022/01/09</td><td><a href="https://www.ioi-jp.org/joi/2021/index.html" itemref="url">第21回日本情報オリンピック 予選</a></td><td>ランクA(予選通過)</td></tr>
                     <tr><td>2020/09/19</td><td><a href="https://atcoder.jp/contests/joi2021-yo1a/" itemprop="url">第20回日本情報オリンピック 一次予選 第一回</a></td><td>ランクB(2問完答相当200点以上)</td></tr>
                     <tr><td>2018/07/15</td><td><a href="https://beta.atcoder.jp/contests/agc026" itemprop="url">AtCoder Grand Contest 026</a></td><td>650位</td></tr>
                     <tr><td>2018/06/24</td><td><a href="https://beta.atcoder.jp/contests/arc099" itemprop="url">AtCoder Regular Contest 099</a></td><td>351位</td></tr>
